[package]
name = "hardware-console-exporter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.0"
config = "0.13.3"
env_logger = "0.10.0"
futures = "0.3.26"
log = "0.4.21"
prometheus-client = "0.19.0"
rand = "0.8.5"
reqwest = {version = "0.11.14", features = ["json"]}
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.152"
serde_json = { version = "1.0.2" }
tokio = { version = "1.37.0", features = ["rt-multi-thread"] }
url = "2.3.1"
